<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_recycler"
    android:orientation="vertical"
    android:padding="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/experience_level"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/ivClose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivClose"
            app:layout_constraintTop_toTopOf="@id/ivClose" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />


    <CheckBox
        android:id="@+id/cbJunior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/junior" />

    <CheckBox
        android:id="@+id/cbMedior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/medior" />

    <CheckBox
        android:id="@+id/cbSenior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/senior" />

    <TextView
        android:id="@+id/tvPick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/selector_main_btn"
        android:padding="3dp"
        android:text="@string/pick"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/main_btn_text_selector"
        android:textSize="22sp" />
</LinearLayout>
